# exam-creator

./: .dockerignore  .editorconfig  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  bunfig.toml  index.html  package.json  sample.env  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-image.yml  docr-clean-up.yml  version-bump.yaml
client/: main.tsx  theme.ts
client/components/: accordian.tsx  attempt-analytics.tsx  attempt-card.tsx  attempt-cumulative-line.tsx  attempt-stats.tsx  config-view.tsx  database-status.tsx  delete-attempt-modal.tsx  dev-sign-in-options.tsx  dialogue-form.tsx  diff-brackets.tsx  edit-exam-actions.tsx  edit-exam-config.tsx  edit-exam-generation-variability.tsx  exam-card.tsx  exam-metrics-card.tsx  generate-modal.tsx  generation-card.tsx  landing-card.tsx  moderation-card.tsx  multiple-choice-form.tsx  protected-route.tsx  question-form.tsx  question-search.tsx  question-type-config-form.tsx  seed-modal.tsx  tag-config-form.tsx  time-taken-distribution.tsx  tooltip.tsx  users-on-page-avatars.tsx  users-on-page.tsx
client/components/attempt/: landing-card.tsx
client/components/ui/: header.tsx  title-stat.tsx
client/contexts/: auth.tsx  index.ts  users-websocket.tsx
client/hooks/: queries.ts  use-collab-exam.ts  use-drag-zoom.ts  use-users-on-path.ts
client/pages/: attempts.tsx  auth-callback-github.tsx  edit-attempt.tsx  edit-exam.tsx  edit.tsx  exams.tsx  generations.tsx  landing.tsx  login.tsx  metrics.tsx  moderations.tsx  users.tsx  view-metrics.tsx
client/types/: index.ts
client/utils/: auth.ts  errors.ts  fetch.ts  pending-deletes.ts  question.test.ts  question.ts  serde.test.ts  serde.ts
prisma/: index.js  schema.prisma
public/mocks/: attempts.json  exam-moderations.json  exams.json  moderations.json
public/mocks/api/exams/66e9a8fecac3bbedc76f0002/generations/: production.json  staging.json
public/mocks/api/exams/674819431ed2e8ac8d170f5e/generations/: staging.json
server/: app.rs  config.rs  errors.rs  generate.rs  generation.rs  main.rs  state.rs
server/database/: mod.rs  prisma.rs
server/extractor/: mod.rs
server/routes/: attempts.rs  events.rs  exam_challenge.rs  exams.rs  generation.rs  generations.rs  github.rs  metrics.rs  mod.rs  moderations.rs  users.rs  websocket.rs
server/routes/auth/: github.rs  mod.rs
