[package]
name = "server"
version = "1.0.0"
edition = "2024"
publish = false

[[bin]]
path = "server/main.rs"
name = "server"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
axum-extra = { version = "0.10.1", features = [
  "cookie-private",
  "typed-header",
] }
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
futures-util = "0.3.31"
http = "1.3.1"
mongodb = { version = "3.2.4" }
oauth2 = "5.0.0"
once_cell = "1.21.3"
prisma-rust-schema = { git = "https://github.com/ShaunSHamilton/prisma-rust-schema.git", version = "1.1.0" }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.4", features = [
  "cors",
  "fs",
  "limit",
  "timeout",
  "trace",
] }
tower-sessions = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[features]
default = ["docker"]
docker = []
