[package]
name = "server"
version = "5.1.1"
edition = "2024"
publish = false

[[bin]]
path = "server/main.rs"
name = "server"

[dependencies]
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12", features = ["cookie-private", "typed-header"] }
axum-streams = { version = "0.24.0", features = ["json"] }
bson = { version = "3", features = ["chrono-0_4", "serde_with-3", "serde"] }
chrono = "0.4"
dotenvy = "0.15"
futures-util = "0.3"
http = "1"
mongodb = { version = "3.4", features = ["bson-3"] }
oauth2 = "5"
once_cell = "1"
prisma-rust-schema = { git = "https://github.com/ShaunSHamilton/prisma-rust-schema.git", version = "2.1.1", features = [
  "bson",
  "mongodb",
] }
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
sentry = { version = "0.46.0", features = [
  "tower-axum-matched-path",
  "tracing",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
supabase_rs = "0.5.1"
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
  "cors",
  "fs",
  "limit",
  "timeout",
  "trace",
] }
tower-sessions = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
